--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "performa-satellite",
-	"version": "1.1.3",
+	"version": "1.1.4",
 	"description": "Remote data collector for Performa.",
 	"author": "Joseph Huckaby <jhuckaby@gmail.com>",
 	"homepage": "https://github.com/jhuckaby/performa-satellite",
@@ -18,7 +18,11 @@
 		"performa"
 	],
 	"scripts": {
-		"package": "mkdir -p dist && pkg --targets node12-linux-x64,node12-macos-x64,node12-win-x64 --out-path dist ."
+		"package": "mkdir -p dist && pkg --compress GZip ."
+	},
+	"pkg": {
+		"targets": [ "node18-linux-x64", "node18-linux-arm64", "node18-macos-x64", "node18-macos-arm64" ],
+    	"outputPath": "dist"
 	},
 	"dependencies": {
 		"pixl-cli": "^1.0.0",
@@ -28,6 +32,6 @@
 		"shell-quote": "1.7.3"
 	},
 	"devDependencies": {
-		"pkg": "4.4.6"
+		"pkg": "5.8.1"
 	}
 }
